--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -24,5 +24,6 @@
   </div>
   <br />
   <button type="submit" class="btn btn-primary">Login</button>
+  <a href="{{url_for('auth.reset_password')}}">Forgot Password?</a>
 </form>
 {% endblock %}
