website now checks ghin through api

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -23,6 +23,16 @@ content %}
     />
   </div>
   <div class="form-group">
+    <label for="ghin">GHIN Number</label>
+    <input
+      type="text"
+      class="form-control"
+      id="ghin"
+      name="ghin"
+      placeholder="Enter your GHIN"
+    />
+  </div>
+  <div class="form-group">
     <label for="password1">Password</label>
     <input
       type="password"
