--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-%}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
 <h1 align="center">Leaderboard</h1>
 <ul class="list-group list-group-flush" id="notes">
   {% for note in user.notes %}
